--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Philip Guo</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Roy Feng</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Philip Guo is an assistant professor of cognitive science at UC San Diego (Go Tritons!). His research spans human-computer interaction, online learning, and computing education.</p>
+	<p>Roy Feng is a Computer Engineerng major at UC San Diego. His aspiration is to become a Software Engineer and create applications that solve difficult problems and make people happy.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
+		<li>Websuite</li>
+		<li>FlashBack Music</li>
+		<li>Risa's Garden</li>
 		<li>...</li>
 	</ol>
 </body>
